<resources>
    <string name="app_name">SkiMate</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>

    <string name="remember_me">Remember Me</string>

    <string name="login">LOGIN</string>
    <string name="signup">New to Ski Mate? Sign up</string>
    <string name="signup_button">Sign up</string>
    <string name="have_account">Already have an account? Log in</string>
    <string name="email">email</string>
    <string name="logo" translatable="false">logo</string>
    <string name="manager_title">Course Manager</string>
    <string name="todo">TODO</string>
    <string name="title_activity_course_map">Course Editor</string>
    <string name="done">Done</string>
    <string name="rotate_title">ROTATE</string>
    <string name="course_placement_instructions"> Long Press to Place Slalom Course</string>

    <string name="new_course_title">New Course</string>
    <string name="my_courses_title">My Courses</string>
    <!--Error Strings-->
    <string-array name="errors_array">
        <item>Error: please input a valid address</item>

    </string-array>

    <!--    API Strings-->
    <string name="openWeatherAPI" translatable="false">ccd0e2c49b12698e5c8b1ccf07dd6f5a</string>
    <string name="google_maps_key">AIzaSyAW7C5nCNKRjEV04ByKBVk0GPEZTgeSugA</string>

    <!--    Dialog Strings-->
    <string name="name_tag">Name</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="cancelUppercase">Cancel</string>
    <string name="welcomeBack">Welcome back</string>

    <string name="delete_course">Delete Course</string>
    <string name="edit_course">Edit Course</string>

    <string name="tempDay" translatable="false">MON</string>
    <string name="tempSpeed" translatable="false">24 MPH</string>
    <string name="mphTitle" translatable="false">MPH</string>
    <string name="tempDirection" translatable="false">South-Southeast</string>
    <string name="tempTemp" translatable="false">76ºF</string>

    <string name="searchResults">Search Results</string>

</resources>
