<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="wrap_content"
android:layout_height="wrap_content">

<ImageView
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:background="@color/colorPrimaryDark"
    android:contentDescription="@string/app_name"
    android:scaleType="center"
    android:src="@drawable/ic_new_course_heading" />
<EditText
    android:id="@+id/new_name"
    android:inputType="text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:hint="@string/name_tag" />
<EditText
    android:id="@+id/new_address"
    android:inputType="textPostalAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="16dp"
    android:fontFamily="sans-serif"
    android:hint="@string/address"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>