<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/windIconViewCard"
        android:layout_width="41dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/wind_icon_top_view"
        android:elevation="8dp"
        map:layout_constraintBottom_toBottomOf="@+id/windReportCard"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintHorizontal_bias="0.498"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="@+id/map"
        map:layout_constraintVertical_bias="0.0"
        map:srcCompat="@drawable/ic_wind_c" />

    <androidx.cardview.widget.CardView
        android:id="@+id/windReportCard"
        android:layout_width="250dp"
        android:layout_height="111dp"
        map:cardBackgroundColor="@color/colorPrimary"
        map:cardCornerRadius="16dp"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintEnd_toEndOf="@+id/map"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="@+id/map"
        map:layout_constraintVertical_bias="0.05">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="20dp">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/windSpeedText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="-15dp"
                    android:text="@string/tempSpeed"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="50sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/windDirectionText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tempDirection"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />

            </TableRow>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/fivedayforecastCard"
        android:layout_width="388dp"
        android:layout_height="140dp"
        map:cardBackgroundColor="@color/colorPrimary"
        map:cardCornerRadius="16dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintVertical_bias="0.958">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="22dp"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/daytext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/tempDay"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/daytext1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/tempDay"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </TableRow>


                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/daytext2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/tempDay"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </TableRow>


                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/daytext3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/tempDay"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </TableRow>


                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/daytext4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/tempDay"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </TableRow>

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="54dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="22dp"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/weathericon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo" />

                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/weathericon1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo" />

                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/weathericon2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo" />

                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/weathericon3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo" />

                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/weathericon4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/todo" />

                    </TableRow>

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="22dp"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/temptext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tempTemp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="28dp">

                        <TextView
                            android:id="@+id/temptext1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tempTemp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />

                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="28dp">

                        <TextView
                            android:id="@+id/temptext2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tempTemp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="28dp">

                        <TextView
                            android:id="@+id/temptext3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tempTemp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </TableRow>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white" />

                    <TableRow
                        android:layout_width="70dp"
                        android:layout_height="28dp">

                        <TextView
                            android:id="@+id/temptext4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tempTemp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp" />
                    </TableRow>

                </LinearLayout>
            </TableRow>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>